# diagnostic_reasoning

./: .env.local.example  .gitattributes  .gitignore  AGENTS.md  README_ZH.md  pyproject.toml
docs/: codex_context_api.md  doctor_reasoning_reconstruction.md  roadmap.md  schema_spec.md
fixtures/: ctcae_golden_cases.json  safety_redteam_cases.json  trend_golden_cases.json
fixtures/synthetic_dataset/: case_records.json  patient_timelines.json  reports.json
scripts/: live_llm_doctor_reasoning_report.py  live_llm_project_review.py  promote_staging.py
src/diagnostic_reasoning/: __init__.py  cli.py  context.py  evaluation.py  io.py  reasoner.py  reconstruction.py  safety.py  schema.py  server.py  staging_import.py  timeline.py
src/diagnostic_reasoning/domains/: __init__.py  cbc.py
tests/: test_cbc.py  test_context_and_cli.py  test_evaluation.py  test_reconstruction.py  test_safety.py  test_timeline.py
