[project]
name = "diagnostic-reasoning"
version = "0.1.0"
description = "Auditable diagnostic-sheet reasoning for physician-reviewed oncology lab timelines."
readme = "README_ZH.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=8",
]

[project.scripts]
diagnostic-reasoning = "diagnostic_reasoning.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
